[gd_scene load_steps=9 format=3 uid="uid://ctjixxri3dn7p"]

[ext_resource type="Script" path="res://Scripts/startup_screen.gd" id="1_euw5g"]
[ext_resource type="Texture2D" uid="uid://btq5tbufrjnjv" path="res://Assets/Custom Text/Frenzies_Logo.png" id="1_mcew0"]
[ext_resource type="AudioStream" uid="uid://4ej2shsx76j" path="res://Assets/Audio/Musics/LogoMusic.mp3" id="1_t8bfo"]
[ext_resource type="FontFile" uid="uid://2gwjcer5hsby" path="res://Assets/fonts/FuturexVariationSwish.ttf" id="2_1myny"]
[ext_resource type="Texture2D" path="res://UI/Background/MainMenu_BG.png" id="2_xxisd"]

[sub_resource type="Animation" id="Animation_6ydu5"]
resource_name = "dim_background"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/FrenziesLogo:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.06667, 1.7, 2.13333, 2.5, 2.93333, 3.53333, 4.66667, 4.86667, 5.06667, 5.23333, 5.43333, 5.53333),
"transitions": PackedFloat32Array(2.82843, 2.21914, 1.46409, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.172549), Color(1, 1, 1, 0.372549), Color(1, 1, 1, 0.462745), Color(1, 1, 1, 0.721569), Color(1, 1, 1, 1), Color(1, 1, 1, 0.835294), Color(1, 1, 1, 0.658824), Color(1, 1, 1, 0.454902), Color(1, 1, 1, 0.294118), Color(1, 1, 1, 0.0588235), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MadeBy:self_modulate")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667, 0.3, 0.433334, 0.566667, 0.7, 0.833333, 0.966667, 2.46667, 2.6, 2.73333, 2.86667, 3, 3.13333),
"transitions": PackedFloat32Array(0.535887, 0.535887, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.101961), Color(1, 1, 1, 0.223529), Color(1, 1, 1, 0.47451), Color(1, 1, 1, 0.576471), Color(1, 1, 1, 0.776471), Color(1, 1, 1, 1), Color(1, 1, 1, 0.87451), Color(1, 1, 1, 0.729412), Color(1, 1, 1, 0.47451), Color(1, 1, 1, 0.278431), Color(1, 1, 1, 0.0666667), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MadeBy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667, 3.23333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/FrenziesLogo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 5.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LogoMusic:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.366667, 6.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LogoMusic:autoplay")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimationPlayer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextureRect:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(5.66667, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.478431)]
}

[sub_resource type="Animation" id="Animation_jwdsj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MadeBy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.192157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/FrenziesLogo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.509804)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MadeBy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimationPlayer/FrenziesLogo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LogoMusic:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LogoMusic:autoplay")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextureRect:color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p38hr"]
_data = {
"Logo_Animation": SubResource("Animation_6ydu5"),
"RESET": SubResource("Animation_jwdsj")
}

[node name="StartupScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euw5g")

[node name="MainMenuBg" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_xxisd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p38hr")
}
autoplay = "Logo_Animation"

[node name="FrenziesLogo" type="Sprite2D" parent="AnimationPlayer"]
visible = false
self_modulate = Color(1, 1, 1, 0.509804)
position = Vector2(576, 324)
scale = Vector2(5.96875, 3.875)
texture = ExtResource("1_mcew0")

[node name="TextureRect" type="ColorRect" parent="."]
self_modulate = Color(0.105882, 0.129412, 0.176471, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="MadeBy" type="Label" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.192157)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 101.0
offset_right = 128.0
offset_bottom = 174.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_1myny")
theme_override_font_sizes/font_size = 64
text = "Made by"

[node name="LogoMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_t8bfo")
volume_db = 1.253
pitch_scale = 0.56
autoplay = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
